modifica paragrafo principale

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -226,7 +226,7 @@
         </defs>
       </svg>
       <h1>Scire, {{ title }}</h1>
-      <p>Prova cambio paragrafo🎉</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis suscipit, quis dolor animi laboriosam dolores, exercitationem voluptatem iste totam, nihil ex ipsam deleniti pariatur non a nostrum facere maiores. Fuga?</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
