--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -11,7 +11,13 @@
   <body>
     <div style="text-align:center; margin-top:50px;">
       <h1>Benvenuto sulla Index</h1>
-    </div>       
+    </div>  
+    <select class="form-select" aria-label="Default select example">
+      <option selected>Open this select menu</option>
+      <option value="1">One</option>
+      <option value="2">Two</option>
+      <option value="3">Three</option>
+    </select>     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
