--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,1 +1,57 @@
-<p>register works!</p>
+<form class="auth-form" (ngSubmit)="onRegister()">
+  <div class="form-group">
+    <label for="regName">Nome</label>
+    <input 
+      type="text" 
+      id="regName" 
+      class="form-control" 
+      placeholder="Inserisci il tuo nome"
+      [(ngModel)]="registerData.name"
+      name="name"
+      required
+    >
+  </div>
+
+  <div class="form-group">
+    <label for="regEmail">Email</label>
+    <input 
+      type="email" 
+      id="regEmail" 
+      class="form-control" 
+      placeholder="Inserisci la tua email"
+      [(ngModel)]="registerData.email"
+      name="email"
+      required
+    >
+  </div>
+  
+  <div class="form-group">
+    <label for="regPassword">Password</label>
+    <input 
+      type="password" 
+      id="regPassword" 
+      class="form-control" 
+      placeholder="Crea una password"
+      [(ngModel)]="registerData.password"
+      name="password"
+      required
+    >
+  </div>
+
+  <div class="form-group">
+    <label for="regConfirmPassword">Conferma Password</label>
+    <input 
+      type="password" 
+      id="regConfirmPassword" 
+      class="form-control" 
+      placeholder="Conferma la password"
+      [(ngModel)]="registerData.confirmPassword"
+      name="confirmPassword"
+      required
+    >
+  </div>
+  
+  <button type="submit" class="btn btn-success btn-block">
+    Registrati
+  </button>
+</form>
